--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,68 +1,36 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h4{
+  color: red;
+  font-size: 30px;
+  text-decoration: underline;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+form{
+  background-color: aqua;
+  padding: 5%;
+  font-size: 20px;
 }
-a:hover {
-  color: #535bf2;
+input{
+  height: 25px;
+  width: 20%;
+  box-shadow: 8px 8px 8px black;
 }
-
-body {
-  margin: 0;
+.place{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-wrap: wrap;
+ justify-content:space-evenly;
+  background-color: #0ff00f;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.helo{
+  background-color: aqua;
+  padding: 7%;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.haa{
+  color: magenta;
+  background-color: #0ff00f;
+  padding: 1%;
 }
-button:hover {
-  border-color: #646cff;
+.LAKKA{
+  background-color: #0ff00f;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#myId{
+ background-color: #0ff00f;
 }
